Introduction Conclusion Résumé Abstract

--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -6,15 +6,16 @@
 
 
 
-During my ISIMA third year studies, my work placement's aim was to incorporate an information technology services and software development company, assigned to a project to redesign an application for recruitment of seasonal.
+During my ISIMA third year studies, my work placement's aim was to incorporate an information technology services and software development company, in which I participated in three projects.
 \\
 
-I have first examined customer needs and the existing solution, allowing the modeling the data model and the new application.
+I made first the third-party applications maintenance in some security and encryption oriented topics.
 
-After the choice of technology, I developed the first functional version of the application.
-This allowed the client to enumerate problems and propose ergonomic and functional improvements.
+After, I participated in project to redesign an application for recruitment.
+I helped the comprehension of customer needs and I developped the application and database model.
 
-When then application was operational and deployed, I imported the data from the old to new database for effective transition.
+At last I joined the Imprimerie Nationale team.
+I developed some back office fonctions of the application.
 \\
 
 \textbf{Keywords : } Sopra Group, Microsoft, VB.NET, Silverlight, SQL Server, WCF RIA Services
