--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -10,7 +10,8 @@
 %%%%%%%%%% Context %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Plusieurs projets
+Être ingénieur amène à travailler sur plusieurs projets ou changer de projet une fois qu'ils sont terminés.
+Les technologies et les domaines varient d'un projet à l'autre nécessitant de s'adapter selon les situations.
 \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
