--- a/src/partie_1.tex
+++ b/src/partie_1.tex
@@ -31,5 +31,5 @@ Michelin est le plus gros employeur de la région Auvergne, mais fait aussi appe
 Dû au nombre croissant de collaborateurs travaillant chez Michelin, la division Rhône-Alpes a créé l'agence de Clermont-Ferrand pour être au plus proche du client.
 
 L'agence de Clermont-Ferrand travaille aussi sur plusieurs autres projets importants.
-TODO: verbe Le pôle identité mène les projets Sides et SITI spécialisés dans la gestion de titres (documents d'identité, passeport, cartes à puce, \ldots), et travaille pour une quinzaine de gouvernements.
+Le pôle identité mène les projets Sides et SITI spécialisés dans la gestion de titres (documents d'identité, passeport, cartes à puce, \ldots), et travaille pour une quinzaine de gouvernements.
 Le groupe Limagrain, dont le siège social est situé Chappes, fait actuellement appel aux services de Sopra Group pour la réalisation du projet BOS.
