--- a/src/resume.tex
+++ b/src/resume.tex
@@ -6,15 +6,16 @@
 
 
 
-Mon stage de fin d'études à l'ISIMA avait pour but l'intégration d'une société de services en ingénierie informatique, affecté à un projet de refonte d'une application de recrutement de saisonniers.
+Mon stage de fin d'études à l'ISIMA avait pour but l'intégration d'une société de services en ingénierie informatique, dans laquelle j'ai participé à trois projets.
 \\
 
-Tout d'abord, j'ai étudié les besoins du client, ainsi que l'ancienne solution, permettant de modéliser le modèle de données et la nouvelle application.
+Tout d'abord, j'ai effectué de la tierce maintenance applicative sur des sujets orientés vers la sécurité et le chiffrement de données.
 
-Après le choix des technologies, j'ai développé une première version fonctionnelle de l'application.
-Celle-ci a permis au client d'énumérer les problèmes et proposer des améliorations ergonomiques et fonctionnelles.
+Ensuite, j'ai participé à la refonte d'une application de recrutement.
+J'ai aidé à la compréhension du besoin et j'ai effectué le développement de l'application et du modèle de donné.
 
-Une fois l'application opérationnelle et son déploiement effectué, il ne restait plus qu'à importer les données de l'ancienne base pour permettre une transition efficace.
+Enfin, j'ai rejoint l'équipe du projet pour l'Imprimerie Nationale.
+J'ai implémenté plusieurs fonctionnalités du back office de l'application.
 \\
 
 \textbf{Mots clé : } Sopra Group, Microsoft, VB.NET, Silverlight, SQL Server, WCF RIA Services
