--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -8,22 +8,16 @@
 
 
 % Rapppel du sujet
-Ce projet avait pour objectif le développement d'une nouvelle application de recrutement à destination du service recrutement du groupe Limagrain.
-L'application devait reprendre les fonctionnalités de l'ancien outil, en y ajoutant de nouvelles fonctionnalités pour satisfaire aux besoins de l'utilisateur.
-
-% Etude terminée ?
-La première version de l'application est actuellement terminée et en production chez le client.
-Les fonctionnalités prévues dans le premier lot ont été implémentées.
-Un second lot est prévu pour le mois de septembre, ajoutant de nouvelles fonctionnalités et appliquant les modifications éventuelles.
-
-% Améliorations possibles
-Certaines améliorations sont possibles, notamment au niveau ergonomie, mais cela nécessiterait l'intervention d'une personne spécialisée.
+Intégré à une société de services en ingénierie informatique, j'ai participé à l'élaboration de trois projets distincts.
 \\
 
+% Etude terminée ?
+
+% Améliorations possibles
+
 % Difficultés rencontrées
-Les principaux problèmes rencontrés concernaient la découverte des différentes technologies utilisées, notamment le socle utilisé sur lequel se base les différents projets.
+Les principaux problèmes rencontrés concernaient la découverte des différentes technologies utilisées, mais aussi les aspects fonctionnels comme la communication avec le client ou la compréhension du besoin.
 
 % Ce que ça m'a apporté
-Ce projet m'a permis d'améliorer ma communication et la compréhension du besoin, du fait de la proximité directe avec le client.
-De plus j'ai pu découvrir de nouvelles technologies approfondissant ainsi mes connaissances.
-J'ai pu ainsi découvrir le métier d'ingénieur avec ses différents aspects fonctionnels et techniques.
+Ce stage m'a permis de découvrir de nouvelles facettes du métier d'ingénieur que je n'ai pas abordé lors de mon stage de seconde année.
+Il a permis d'améliorer mes compétences fonctionnelles avec la communication et la compréhension du besoin, mais aussi techniques avec la découverte de nouvelles technologies.
