--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -10,8 +10,10 @@
 %%%%%%%%%% Context %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Être ingénieur amène à travailler sur plusieurs projets ou changer de projet une fois qu'ils sont terminés.
-Les technologies et les domaines varient d'un projet à l'autre nécessitant de s'adapter selon les situations.
+Le travail d'un ingénieur en informatique peut être fonctionnel avec une présence chez le client pour comprendre son besoin, mais peut aussi être technique ayant comme objectif le développement de l'application.
+
+La société de service en ingénierie informatique n'est pas une exception, et l'une de ses spécificité est le changement régulier de projet.
+Les technologies et les domaines d'activité varient d'un projet à l'autre nécessitant de s'adapter selon les situations.
 \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
